--- a/src/layout.css
+++ b/src/layout.css
@@ -2,214 +2,216 @@ html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
-  }
-  body {
+}
+body {
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  }
-  article,
-  aside,
-  details,
-  figcaption,
-  figure,
-  footer,
-  header,
-  main,
-  menu,
-  nav,
-  section,
-  summary {
+}
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+main,
+menu,
+nav,
+section,
+summary {
     display: block;
-  }
-  audio,
-  canvas,
-  progress,
-  video {
+}
+audio,
+canvas,
+progress,
+video {
     display: inline-block;
-  }
-  audio:not([controls]) {
+}
+audio:not([controls]) {
     display: none;
     height: 0;
-  }
-  progress {
+}
+progress {
     vertical-align: baseline;
-  }
-  [hidden],
-  template {
+}
+[hidden],
+template {
     display: none;
-  }
-  a {
+}
+a {
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
-  }
-  a:active,
-  a:hover {
+}
+a:active,
+a:hover {
     outline-width: 0;
-  }
-  abbr[title] {
+}
+abbr[title] {
     border-bottom: none;
     text-decoration: underline;
     text-decoration: underline dotted;
-  }
-  b,
-  strong {
+}
+b,
+strong {
     font-weight: inherit;
     font-weight: bolder;
-  }
-  dfn {
+}
+dfn {
     font-style: italic;
-  }
-  h1 {
+}
+h1 {
     font-size: 2em;
     margin: 0.67em 0;
-  }
-  mark {
+}
+mark {
     background-color: #ff0;
     color: #000;
-  }
-  small {
+}
+small {
     font-size: 80%;
-  }
-  sub,
-  sup {
+}
+sub,
+sup {
     font-size: 75%;
     line-height: 0;
     position: relative;
     vertical-align: baseline;
-  }
-  sub {
+}
+sub {
     bottom: -0.25em;
-  }
-  sup {
+}
+sup {
     top: -0.5em;
-  }
-  img {
+}
+img {
     border-style: none;
-  }
-  svg:not(:root) {
+}
+svg:not(:root) {
     overflow: hidden;
-  }
-  code,
-  kbd,
-  pre,
-  samp {
+}
+code,
+kbd,
+pre,
+samp {
     font-family: monospace, monospace;
     font-size: 1em;
-  }
-  figure {
+}
+figure {
     margin: 1em 40px;
-  }
-  hr {
+}
+hr {
     box-sizing: content-box;
     height: 0;
     overflow: visible;
-  }
-  button,
-  input,
-  optgroup,
-  select,
-  textarea {
+}
+button,
+input,
+optgroup,
+select,
+textarea {
     font: inherit;
     margin: 0;
-  }
-  optgroup {
+}
+optgroup {
     font-weight: 700;
-  }
-  button,
-  input {
+}
+button,
+input {
     overflow: visible;
-  }
-  button,
-  select {
+}
+button,
+select {
     text-transform: none;
-  }
-  [type="reset"],
-  [type="submit"],
-  button,
-  html [type="button"] {
+}
+[type='reset'],
+[type='submit'],
+button,
+html [type='button'] {
     -webkit-appearance: button;
-  }
-  [type="button"]::-moz-focus-inner,
-  [type="reset"]::-moz-focus-inner,
-  [type="submit"]::-moz-focus-inner,
-  button::-moz-focus-inner {
+}
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner,
+button::-moz-focus-inner {
     border-style: none;
     padding: 0;
-  }
-  [type="button"]:-moz-focusring,
-  [type="reset"]:-moz-focusring,
-  [type="submit"]:-moz-focusring,
-  button:-moz-focusring {
+}
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring,
+button:-moz-focusring {
     outline: 1px dotted ButtonText;
-  }
-  fieldset {
+}
+fieldset {
     border: 1px solid silver;
     margin: 0 2px;
     padding: 0.35em 0.625em 0.75em;
-  }
-  legend {
+}
+legend {
     box-sizing: border-box;
     color: inherit;
     display: table;
     max-width: 100%;
     padding: 0;
     white-space: normal;
-  }
-  textarea {
+}
+textarea {
     overflow: auto;
-  }
-  [type="checkbox"],
-  [type="radio"] {
+}
+[type='checkbox'],
+[type='radio'] {
     box-sizing: border-box;
     padding: 0;
-  }
-  [type="number"]::-webkit-inner-spin-button,
-  [type="number"]::-webkit-outer-spin-button {
+}
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
     height: auto;
-  }
-  [type="search"] {
+}
+[type='search'] {
     -webkit-appearance: textfield;
     outline-offset: -2px;
-  }
-  [type="search"]::-webkit-search-cancel-button,
-  [type="search"]::-webkit-search-decoration {
+}
+[type='search']::-webkit-search-cancel-button,
+[type='search']::-webkit-search-decoration {
     -webkit-appearance: none;
-  }
-  ::-webkit-input-placeholder {
+}
+::-webkit-input-placeholder {
     color: inherit;
     opacity: 0.54;
-  }
-  ::-webkit-file-upload-button {
+}
+::-webkit-file-upload-button {
     -webkit-appearance: button;
     font: inherit;
-  }
-  html {
-    font: 112.5%/1.45em helvetica, sans-serif;
+}
+html {
+    font:
+        112.5%/1.45em helvetica,
+        sans-serif;
     box-sizing: border-box;
     overflow-y: scroll;
-  }
-  * {
+}
+* {
     box-sizing: inherit;
-  }
-  *:before {
+}
+*:before {
     box-sizing: inherit;
-  }
-  *:after {
+}
+*:after {
     box-sizing: inherit;
-  }
-  body {
+}
+body {
     color: hsla(0, 0%, 0%, 0.8);
     font-family: helvetica, sans-serif;
     font-weight: normal;
     word-wrap: break-word;
     font-kerning: normal;
-    -moz-font-feature-settings: "kern", "liga", "clig", "calt";
-    -ms-font-feature-settings: "kern", "liga", "clig", "calt";
-    -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
-    font-feature-settings: "kern", "liga", "clig", "calt";
-  }
-  img {
+    -moz-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+    -ms-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+    -webkit-font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+    font-feature-settings: 'kern', 'liga', 'clig', 'calt';
+}
+img {
     max-width: 100%;
     margin-left: 0;
     margin-right: 0;
@@ -219,8 +221,8 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
-  }
-  h1 {
+}
+h1 {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -230,14 +232,24 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family:
+        -apple-system,
+        BlinkMacSystemFont,
+        Segoe UI,
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        Fira Sans,
+        Droid Sans,
+        Helvetica Neue,
+        sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
     font-size: 1.25rem;
     line-height: 1.1;
-  }
-  h2 {
+}
+h2 {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -247,14 +259,24 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family:
+        -apple-system,
+        BlinkMacSystemFont,
+        Segoe UI,
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        Fira Sans,
+        Droid Sans,
+        Helvetica Neue,
+        sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
     font-size: 1.62671rem;
     line-height: 1.1;
-  }
-  h3 {
+}
+h3 {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -264,14 +286,24 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family:
+        -apple-system,
+        BlinkMacSystemFont,
+        Segoe UI,
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        Fira Sans,
+        Droid Sans,
+        Helvetica Neue,
+        sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
     font-size: 1.38316rem;
     line-height: 1.1;
-  }
-  h4 {
+}
+h4 {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -281,14 +313,24 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family:
+        -apple-system,
+        BlinkMacSystemFont,
+        Segoe UI,
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        Fira Sans,
+        Droid Sans,
+        Helvetica Neue,
+        sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
     font-size: 1rem;
     line-height: 1.1;
-  }
-  h5 {
+}
+h5 {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -298,14 +340,24 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family:
+        -apple-system,
+        BlinkMacSystemFont,
+        Segoe UI,
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        Fira Sans,
+        Droid Sans,
+        Helvetica Neue,
+        sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
     font-size: 0.85028rem;
     line-height: 1.1;
-  }
-  h6 {
+}
+h6 {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -315,14 +367,24 @@ html {
     padding-top: 0;
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-      Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family:
+        -apple-system,
+        BlinkMacSystemFont,
+        Segoe UI,
+        Roboto,
+        Oxygen,
+        Ubuntu,
+        Cantarell,
+        Fira Sans,
+        Droid Sans,
+        Helvetica Neue,
+        sans-serif;
     font-weight: bold;
     text-rendering: optimizeLegibility;
     font-size: 0.78405rem;
     line-height: 1.1;
-  }
-  hgroup {
+}
+hgroup {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -331,8 +393,8 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
-  }
-  ul {
+}
+ul {
     margin-left: 1.45rem;
     margin-right: 0;
     margin-top: 0;
@@ -343,8 +405,8 @@ html {
     margin-bottom: 1.45rem;
     list-style-position: outside;
     list-style-image: none;
-  }
-  ol {
+}
+ol {
     margin-left: 1.45rem;
     margin-right: 0;
     margin-top: 0;
@@ -355,8 +417,8 @@ html {
     margin-bottom: 1.45rem;
     list-style-position: outside;
     list-style-image: none;
-  }
-  dl {
+}
+dl {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -365,8 +427,8 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
-  }
-  dd {
+}
+dd {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -375,8 +437,8 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
-  }
-  p {
+}
+p {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -385,8 +447,8 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
-  }
-  figure {
+}
+figure {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -395,8 +457,8 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
-  }
-  pre {
+}
+pre {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -408,8 +470,8 @@ html {
     overflow: auto;
     word-wrap: normal;
     padding: 1.45rem;
-  }
-  table {
+}
+table {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -422,8 +484,8 @@ html {
     line-height: 1.45rem;
     border-collapse: collapse;
     width: 100%;
-  }
-  fieldset {
+}
+fieldset {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -432,8 +494,8 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
-  }
-  blockquote {
+}
+blockquote {
     margin-left: 1.45rem;
     margin-right: 1.45rem;
     margin-top: 0;
@@ -442,8 +504,8 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
-  }
-  form {
+}
+form {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -452,8 +514,8 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
-  }
-  noscript {
+}
+noscript {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -462,8 +524,8 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
-  }
-  iframe {
+}
+iframe {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -472,8 +534,8 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
-  }
-  hr {
+}
+hr {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -485,8 +547,8 @@ html {
     background: hsla(0, 0%, 0%, 0.2);
     border: none;
     height: 1px;
-  }
-  address {
+}
+address {
     margin-left: 0;
     margin-right: 0;
     margin-top: 0;
@@ -495,170 +557,169 @@ html {
     padding-right: 0;
     padding-top: 0;
     margin-bottom: 1.45rem;
-  }
-  b {
+}
+b {
     font-weight: bold;
-  }
-  strong {
+}
+strong {
     font-weight: bold;
-  }
-  dt {
+}
+dt {
     font-weight: bold;
-  }
-  th {
+}
+th {
     font-weight: bold;
-  }
-  li {
+}
+li {
     margin-bottom: calc(1.45rem / 2);
-  }
-  ol li {
+}
+ol li {
     padding-left: 0;
-  }
-  ul li {
+}
+ul li {
     padding-left: 0;
-  }
-  li > ol {
+}
+li > ol {
     margin-left: 1.45rem;
     margin-bottom: calc(1.45rem / 2);
     margin-top: calc(1.45rem / 2);
-  }
-  li > ul {
+}
+li > ul {
     margin-left: 1.45rem;
     margin-bottom: calc(1.45rem / 2);
     margin-top: calc(1.45rem / 2);
-  }
-  blockquote *:last-child {
+}
+blockquote *:last-child {
     margin-bottom: 0;
-  }
-  li *:last-child {
+}
+li *:last-child {
     margin-bottom: 0;
-  }
-  p *:last-child {
+}
+p *:last-child {
     margin-bottom: 0;
-  }
-  li > p {
+}
+li > p {
     margin-bottom: calc(1.45rem / 2);
-  }
-  code {
+}
+code {
     font-size: 0.85rem;
     line-height: 1.45rem;
-  }
-  kbd {
+}
+kbd {
     font-size: 0.85rem;
     line-height: 1.45rem;
-  }
-  samp {
+}
+samp {
     font-size: 0.85rem;
     line-height: 1.45rem;
-  }
-  abbr {
+}
+abbr {
     border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
     cursor: help;
-  }
-  acronym {
+}
+acronym {
     border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
     cursor: help;
-  }
-  abbr[title] {
+}
+abbr[title] {
     border-bottom: 1px dotted hsla(0, 0%, 0%, 0.5);
     cursor: help;
     text-decoration: none;
-  }
-  thead {
+}
+thead {
     text-align: left;
-  }
-  td,
-  th {
+}
+td,
+th {
     text-align: left;
     border-bottom: 1px solid hsla(0, 0%, 0%, 0.12);
-    font-feature-settings: "tnum";
-    -moz-font-feature-settings: "tnum";
-    -ms-font-feature-settings: "tnum";
-    -webkit-font-feature-settings: "tnum";
+    font-feature-settings: 'tnum';
+    -moz-font-feature-settings: 'tnum';
+    -ms-font-feature-settings: 'tnum';
+    -webkit-font-feature-settings: 'tnum';
     padding-left: 0.96667rem;
     padding-right: 0.96667rem;
     padding-top: 0.725rem;
     padding-bottom: calc(0.725rem - 1px);
-  }
-  th:first-child,
-  td:first-child {
+}
+th:first-child,
+td:first-child {
     padding-left: 0;
-  }
-  th:last-child,
-  td:last-child {
+}
+th:last-child,
+td:last-child {
     padding-right: 0;
-  }
-  tt,
-  code {
+}
+tt,
+code {
     background-color: hsla(0, 0%, 0%, 0.04);
     border-radius: 3px;
-    font-family: "SFMono-Regular", Consolas, "Roboto Mono", "Droid Sans Mono",
-      "Liberation Mono", Menlo, Courier, monospace;
+    font-family: 'SFMono-Regular', Consolas, 'Roboto Mono', 'Droid Sans Mono',
+        'Liberation Mono', Menlo, Courier, monospace;
     padding: 0;
     padding-top: 0.2em;
     padding-bottom: 0.2em;
-  }
-  pre code {
+}
+pre code {
     background: none;
     line-height: 1.42;
-  }
-  code:before,
-  code:after,
-  tt:before,
-  tt:after {
+}
+code:before,
+code:after,
+tt:before,
+tt:after {
     letter-spacing: -0.2em;
-    content: " ";
-  }
-  pre code:before,
-  pre code:after,
-  pre tt:before,
-  pre tt:after {
-    content: "";
-  }
-  @media only screen and (max-width: 480px) {
+    content: ' ';
+}
+pre code:before,
+pre code:after,
+pre tt:before,
+pre tt:after {
+    content: '';
+}
+@media only screen and (max-width: 480px) {
     html {
-      font-size: 100%;
+        font-size: 100%;
     }
-  }
-  
-  
-  /* my styles */
-  
-  .navbar {
+}
+
+/* my styles */
+
+.navbar {
     overflow: hidden;
     background-color: #333;
     margin: 0px auto;
     max-width: 960px;
-  }
-  
-  .navbar a {
+}
+
+.navbar a {
     float: left;
     font-size: 16px;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
-  
-  .navbar-text {
+}
+
+.navbar-text {
     display: inline-block;
     font-size: 16px;
     color: white;
     text-align: center;
     text-decoration: none;
-  }
-  
-  .navbar input {
+}
+
+.navbar input {
     width: 70px;
-  }
-  
-  .dropdown {
+}
+
+.dropdown {
     float: left;
     overflow: hidden;
-  }
-  
-  .dropdown .dropbtn {
-    font-size: 16px;  
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;
     border: none;
     outline: none;
     color: white;
@@ -666,65 +727,66 @@ html {
     background-color: inherit;
     font-family: inherit;
     margin: 0;
-  }
-  
-  .navbar a:hover, .dropdown:hover .dropbtn {
+}
+
+.navbar a:hover,
+.dropdown:hover .dropbtn {
     background-color: red;
-  }
-  
-  .dropdown-content {
+}
+
+.dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-  }
-  
-  .dropdown-content a {
+}
+
+.dropdown-content a {
     float: none;
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
-  }
-  
-  .dropdown-content a:hover {
+}
+
+.dropdown-content a:hover {
     background-color: #ddd;
-  }
-  
-  .dropdown:hover .dropdown-content {
+}
+
+.dropdown:hover .dropdown-content {
     display: block;
-  }
-  
-  canvas {
+}
+
+canvas {
     background: #a594941c !important;
-  }
-  
-  .save-btn {
+}
+
+.save-btn {
     margin-left: 0px;
     background: #af2e2ed1;
     color: #efe5e5;
     border: none;
     height: 32px;
     cursor: pointer;
-  }
-  
-  .save-btn:hover {
+}
+
+.save-btn:hover {
     background: #af2e2e;
-  }
-  
-  .save-btn:active {
+}
+
+.save-btn:active {
     background: #f13a3a;
     outline: none;
-  }
-  
-  .save-btn:focus {
+}
+
+.save-btn:focus {
     outline: none;
-  }
-  
-  #cover {
+}
+
+#cover {
     content: '';
     display: block;
     position: absolute;
@@ -732,27 +794,26 @@ html {
     left: 0;
     width: 100vw;
     height: 100vh;
-  }
-  
-  #cover.hide {
+}
+
+#cover.hide {
     display: none;
-  }
-  
-  .pop-up-line {
+}
+
+.pop-up-line {
     display: flex;
     justify-content: space-between;
     padding: 0 16px;
-  }
-  
-  .animate-character
-  {
-     text-transform: uppercase;
+}
+
+.animate-character {
+    text-transform: uppercase;
     background-image: linear-gradient(
-      -225deg,
-      #231557 0%,
-      #44107a 29%,
-      #ff1361 67%,
-      #fff800 100%
+        -225deg,
+        #231557 0%,
+        #44107a 29%,
+        #ff1361 67%,
+        #fff800 100%
     );
     background-size: auto auto;
     background-clip: border-box;
@@ -767,10 +828,10 @@ html {
     position: fixed;
     z-index: 1000;
     top: 0;
-  }
-  
-  @keyframes textclip {
+}
+
+@keyframes textclip {
     to {
-      background-position: 200% center;
+        background-position: 200% center;
     }
-  }
+}
