--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,14 @@
 @tailwind utilities;
 
 body {
+    /* overflow: hidden;
+    position: fixed; */
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    padding-top: env(safe-area-inset-top);
+    /* padding-top: env(safe-area-inset-top);
     padding-bottom: env(safe-area-inset-bottom);
     padding-left: env(safe-area-inset-left);
-    padding-right: env(safe-area-inset-right);
+    padding-right: env(safe-area-inset-right); */
 }
