--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-    /* overflow: hidden;
-    position: fixed; */
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    /* padding-top: env(safe-area-inset-top);
-    padding-bottom: env(safe-area-inset-bottom);
-    padding-left: env(safe-area-inset-left);
-    padding-right: env(safe-area-inset-right); */
+._fix-height-safe-area {
+    /* equivalent to 100dvh in major browsers */
+    min-height: calc(100vh - env(safe-area-inset-bottom, 0) - env(safe-area-inset-top, 0));
+}
+
+@supports (-webkit-touch-callout: none) {
+    ._fix-height-safe-area {
+        /* for ios safari 15, safe-area-inset-bottom is 0, so a special fix apply here */
+        min-height: -webkit-fill-available;
+    }
 }
